# Project-sovm

./: .coveragerc  .gitignore  README.md  README.txt  dodo.py  pyproject.toml  setup.cfg
client/: __init__.py  client.py  display.py  input_handler.py  main.py
common/: __init__.py  constants.py  i18n.py  models.py  protocol.py
common/locale/: __init__.py  messages.pot
common/locale/en/LC_MESSAGES/: messages.po
common/locale/ru/LC_MESSAGES/: messages.po
docs/source/: client.rst  common.rst  conf.py  index.rst  server.rst
locale/: messages.pot
locale/en/LC_MESSAGES/: messages.mo  messages.po
locale/ru/LC_MESSAGES/: messages.mo  messages.po
server/: __init__.py  game_engine.py  main.py  server.py
tests/: conftest.py  test_client.py  test_display.py  test_game_engine.py  test_i18n.py  test_input_parsing.py  test_main.py  test_models.py  test_protocol.py  test_scaffold.py
