[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-sovm"
version = "0.1.0"
description = "King and Servant — game core"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["common*", "server*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
include = [
    "common/*.py",
    "server/*.py",
]
omit = [
    "tests/*",
]

[tool.coverage.report]
fail_under = 90
show_missing = true
